# orm-study

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: 01-label-issue.yml  02-quiz-format-check.yml  02-quiz-format-cheek.yml  03-ci.yml  03-lint.yml
orm_study/: main.py
orm_study/quiz/: certification.py  command.py  constants.py  decorator.py  python.py  reader.py
orm_study/quiz/_python/조건문/: multiple_choice.txt
orm_study/quiz/python/: __init__.py
orm_study/quiz/python/변수/: multiple_choice.txt  subjective.txt
orm_study/quiz/python/연산/: multiple_choice.txt
orm_study/quiz/python/연산자/: multiple_choice.txt
orm_study/quiz/python/자료형/: multiple_choice.txt
scripts/: certification.py  decorator.py  quiz_format_checker.py
tests/: conftest.py  test_quiz_command.py  test_quiz_constants.py  test_quiz_python.py
