[tool.poetry]
name = "orm-study"
version = "0.0.1"
description = "library for studying python in ormcamp"
authors = ["jungminchae <minchae3618@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
rich = "^13.7.1"


[tool.poetry.scripts]
ost = "orm_study.main:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
